Filter out image-based and ASS/SSA subtitles for dual